--- a/src/resources/scss/style.scss
+++ b/src/resources/scss/style.scss
@@ -1,5 +1,5 @@
 //common classes
-@import 'common/root';
+@import 'common/variables';
 @import 'common/html';
 @import 'common/body';
 @import 'common/fonts';
