--- a/src/resources/scss/base/_base-btn.scss
+++ b/src/resources/scss/base/_base-btn.scss
@@ -33,9 +33,9 @@
     );
   }
 
-  @media only screen and (orientation: portrait) {
+  @media (width <= 600px) {
     & {
-      width: 288px;
+      max-width: 288px;
     }
   }
 }
