--- a/src/resources/scss/base/_base-title.scss
+++ b/src/resources/scss/base/_base-title.scss
@@ -5,7 +5,7 @@
   font-family: var(--primary-font-fam);
   letter-spacing: -0.06em;
 
-  @media only screen and (orientation: portrait) {
+  @media (width <= 600px) {
     & {
       font-weight: 600;
     }
