--- a/src/resources/scss/blocks/_header.scss
+++ b/src/resources/scss/blocks/_header.scss
@@ -1,17 +1,8 @@
 .header {
-  &__wrapper {
-    position: relative;
+  &__hero-box {
+    position: absolute;
     width: 100%;
     min-height: 100vh;
-    background-image: image-set(
-      url('/src/resources/images/head-page/hero@1X.jpg') 1x,
-      url('/src/resources/images/head-page/hero@2X.jpg') 2x,
-      url('/src/resources/images/head-page/hero@1X.webp') 1x,
-      url('/src/resources/images/head-page/hero@2X.webp') 2x
-    );
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
 
     &::before {
       position: absolute;
@@ -25,10 +16,20 @@
     }
   }
 
+  &__hero {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   &__content {
     position: relative;
     z-index: 2;
     max-width: 1200px;
+    height: 100vh;
     margin: 0 auto;
   }
 
@@ -38,19 +39,6 @@
     margin-bottom: 15%;
     margin-left: 30px;
     padding-top: 8px;
-  }
-
-  &__logo-box {
-    display: inline-block;
-    width: 159px;
-    max-width: 100%;
-    height: 104px;
-    margin-top: 8px;
-  }
-
-  &__logo {
-    max-width: 100%;
-    height: auto;
   }
 
   &__navbar {
@@ -139,8 +127,10 @@
   }
 
   &__btn {
+    max-width: fit-content;
     margin-top: 32px;
     margin-bottom: 40px;
+    text-decoration: none;
   }
 
   @media (width <= 600px) {
@@ -161,12 +151,6 @@
       margin-left: 0;
       padding-right: 16px;
       padding-left: 16px;
-    }
-
-    &__logo-box {
-      width: 114px;
-      max-width: 30vw;
-      height: 75px;
     }
 
     &__navbar {
@@ -222,6 +206,7 @@
     }
 
     &__btn {
+      max-width: unset;
       margin: 24px 0 22px;
     }
   }
