Upload check marks adjustments

--- a/src/views/layouts/base.njk
+++ b/src/views/layouts/base.njk
@@ -69,38 +69,13 @@
         </div>
         <div class="header__lower-part">
           <h1 class="base-title header__title">Cloud software development</h1>
-          <div class="header__features-block">
-            <img
-              src="src/resources/images/head-page/check-mark.svg"
-              alt="check-mark"
-              width="24"
-              height="24"
-              class="header__check-mark"
-            />
-            <img
-              src="src/resources/images/head-page/check-mark.svg"
-              alt="check-mark"
-              width="24"
-              height="24"
-              class="header__check-mark"
-            />
-            <img
-              src="src/resources/images/head-page/check-mark.svg"
-              alt="check-mark"
-              width="24"
-              height="24"
-              class="header__check-mark"
-            />
-            <ul class="header__features-list">
-              <li class="header__feature-item">
-                Websites, mobile applications
-              </li>
-              <li class="header__feature-item">Remote development teams</li>
-              <li class="header__feature-item">
-                Cloud Infrastructure Management
-              </li>
-            </ul>
-          </div>
+          <ul class="header__features-list">
+            <li class="header__feature-item">Websites, mobile applications</li>
+            <li class="header__feature-item">Remote development teams</li>
+            <li class="header__feature-item">
+              Cloud Infrastructure Management
+            </li>
+          </ul>
           <a href="/#requestForm" class="base-btn header__btn">
             Send a request
           </a>
