--- a/src/resources/scss/blocks/_header.scss
+++ b/src/resources/scss/blocks/_header.scss
@@ -88,35 +88,6 @@
     line-height: 1.5;
   }
 
-  &__features-block {
-    display: grid;
-    grid-template-rows: repeat(3, 24px);
-    grid-template-columns: repeat(1, 24px 1fr);
-    gap: 8px;
-    width: max-content;
-    margin: 0;
-    padding: 0;
-    line-height: 1.3;
-    list-style: none;
-  }
-
-  &__check-mark {
-    width: auto;
-    height: auto;
-
-    &:nth-child(1) {
-      grid-row: 1/2;
-    }
-
-    &:nth-child(2) {
-      grid-row: 2/3;
-    }
-
-    &:nth-child(3) {
-      grid-row: 3/4;
-    }
-  }
-
   &__features-list {
     display: grid;
     grid-template-rows: repeat(3, 24px);
@@ -124,6 +95,21 @@
     margin: 0;
     padding: 0;
     list-style: none;
+  }
+
+  &__feature-item {
+    display: flex;
+    align-items: center;
+
+    &::before {
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      margin-right: 5px;
+      background-image: url('/src/resources/images/head-page/check-mark.svg');
+      background-size: cover;
+      content: '';
+    }
   }
 
   &__btn {
@@ -193,7 +179,7 @@
 
     &__lower-part {
       justify-self: center;
-      max-width: min-content;
+      max-width: fit-content;
       margin: 0;
       margin-right: clamp(0px, 0.4rem, 20px);
       margin-left: clamp(0px, 0.4rem, 20px);
@@ -206,7 +192,7 @@
     }
 
     &__btn {
-      max-width: unset;
+      max-width: 280px;
       margin: 24px 0 22px;
     }
   }
