--- a/src/resources/scss/blocks/_about.scss
+++ b/src/resources/scss/blocks/_about.scss
@@ -27,19 +27,13 @@
     margin-top: 120px;
   }
 
-  &__image {
-    position: relative;
+  &__picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
-    background: image-set(
-      url('/src/resources/images/about-us-page/backgr-img1X.jpg') 1x,
-      url('/src/resources/images/about-us-page/backgr-img2X.jpg') 2x,
-      url('/src/resources/images/about-us-page/backgr-img1X.webp') 1x,
-      url('/src/resources/images/about-us-page/backgr-img2X.webp') 2x
-    );
-    background-repeat: no-repeat;
-    background-position: 0 65%;
-    background-size: cover;
+    overflow: hidden;
     border-radius: 220px;
 
     &::before {
@@ -73,6 +67,10 @@
       animation: spin 2.5s linear infinite;
       content: '';
     }
+  }
+
+  &__img {
+    object-fit: cover;
   }
 
   @keyframes spin {
