--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -8,7 +8,25 @@ layout: "base.njk"
 <section class="about" id="about">
   <div class="about__content">
     <div class="about__image-container">
-      <div class="about__image"></div>
+      <picture class="about__picture">
+        <source
+          srcset="src/resources/images/about-us-page/backgr-img2X.webp"
+          type="image/webp"
+          class="about__img"
+        />
+        <source
+          srcset="src/resources/images/about-us-page/backgr-img1X.webp"
+          type="image/webp"
+          class="about__img"
+        />
+        <img
+          src="src/resources/images/about-us-page/backgr-img1X.jpg"
+          alt=""
+          width="1140"
+          height="363"
+          class="about__img"
+        />
+      </picture>
     </div>
     <div class="about__wrapper">
       <h2 class="base-title about__title">
