--- a/src/resources/scss/blocks/_founder.scss
+++ b/src/resources/scss/blocks/_founder.scss
@@ -3,6 +3,10 @@
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
+  }
+
+  &__sphere {
+    position: relative;
 
     &::after {
       position: absolute;
