--- a/src/resources/scss/blocks/_services.scss
+++ b/src/resources/scss/blocks/_services.scss
@@ -2,8 +2,13 @@
   container-type: inline-size;
 
   &__content {
+    position: relative;
     max-width: 1200px;
     margin: 0 auto;
+  }
+
+  &__sphere {
+    position: relative;
 
     &::before {
       position: absolute;
@@ -21,7 +26,7 @@
 
   &__wrapper {
     position: absolute;
-    top: -50px;
+    top: -85px;
     display: grid;
     grid-template-columns: 1fr auto;
     column-gap: 90px;
