--- a/src/resources/scss/style.scss
+++ b/src/resources/scss/style.scss
@@ -18,7 +18,7 @@
 @import 'blocks/form';
 @import 'blocks/footer';
 @import 'blocks/info';
-@import 'blocks/menu';
+@import 'blocks/hero';
 
 //utilities
 @import 'utilities/green-part';
