--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -99,7 +99,7 @@ layout: "base.njk"
 </section>
 
 <section class="services" id="services">
-  <div class="services__content">
+  <div class="services__content services__sphere">
     <div class="services__wrapper">
       <h2 class="base-title services__section-header">Services</h2>
       <picture class="services__decor-wrapper">
@@ -193,7 +193,7 @@ layout: "base.njk"
 </section>
 
 <section class="founder" id="founder">
-  <div class="founder__content">
+  <div class="founder__content founder__sphere">
     <div class="founder__wrapper">
       <h2 class="base-title founder__section-header">Founder</h2>
       <picture class="founder__img-box">
